--- a/roles/satellite-audio/templates/daemon.conf
+++ b/roles/satellite-audio/templates/daemon.conf
@@ -1,31 +1,34 @@
 # General daemon settings
-daemonize = yes  ; Required in system mode
-fail = yes
+daemonize = yes                  ; Required in system mode
+fail = yes                        ; Fail if the daemon cannot start
 
 # High-priority scheduling
-high-priority = yes
-realtime-scheduling = yes
-realtime-priority = 5
+high-priority = yes               ; Enable high-priority scheduling
+realtime-scheduling = yes         ; Enable real-time scheduling
+realtime-priority = 9             ; Set priority to 9 for responsiveness (lower for safety on Pi)
 
 # Resample method
-resample-method = speex-float-1
-avoid-resampling = no
+resample-method = speex-float-3   ; High-quality resampling method
+avoid-resampling = yes             ; Avoid unnecessary resampling
 
 # Daemon startup and memory usage
-exit-idle-time = -1  ; Don't exit after idle time in system mode
-scache-idle-time = 10
+exit-idle-time = -1               ; Don't exit after idle time in system mode
+scache-idle-time = 2               ; Reduced idle time to free resources more quickly
 
-# Audio quality
-default-sample-format = s16le
-default-sample-rate = 44100
-alternate-sample-rate = 48000
-default-sample-channels = 2
+# Audio quality settings
+default-sample-format = s16le     ; Default sample format
+default-sample-rate = 44100        ; Standard sample rate for most audio
+alternate-sample-rate = 48000      ; Alternate sample rate for higher quality
+default-sample-channels = 2        ; Default number of audio channels (stereo)
 
 # Buffering and latency settings
-default-fragments = 4
-default-fragment-size-msec = 25
+default-fragments = 2              ; Fewer fragments for lower latency
+default-fragment-size-msec = 25    ; Increased fragment size for stability and responsiveness
 
 # General settings
-enable-shm = no
-shm-size-bytes = 0  ; Setting to 0 means use the system default
-flat-volumes = no
+enable-shm = yes                   ; Enable shared memory for performance
+shm-size-bytes = 0                 ; Use the system default for shared memory size
+flat-volumes = no                  ; Maintain consistent volume levels
+
+# Additional settings for performance
+enable-lfe-remixing = yes          ; Enable low-frequency effects remixing
