--- a/roles/pihole/tasks/main.yml
+++ b/roles/pihole/tasks/main.yml
@@ -55,29 +55,32 @@
             - 127.0.0.1
           environment:
             TZ: 'Europe/Berlin'
-            FTLCONF_LOCAL_IPV4: '{{ ansible_default_ipv4.address }}'
-            WEBPASSWORD: '{{ pihole_webpassword }}'
-            PIHOLE_DNS_: '{{ router_ip }}'
-            VIRTUAL_HOST: "{{ pihole_virtual_host }}"
-            DNSMASQ_LISTENING: all
-            DNS_BOGUS_PRIV: "false"
-            DNS_FQDN_REQUIRED: "false"
-            REV_SERVER: "true"
-            REV_SERVER_DOMAIN: "lan"
-            REV_SERVER_TARGET: '{{ router_ip }}'
-            REV_SERVER_CIDR: '{{ cidr }}'
-            DHCP_ACTIVE: "true"
-            DHCP_START: "{{ dhcp_start }}"
-            DHCP_END: "{{ dhcp_end }}"
-            DHCP_ROUTER: "{{ router_ip }}"
-            PIHOLE_DOMAIN: "lan"
+            FTLCONF_dns_reply_host_IPv4: '{{ ansible_default_ipv4.address }}'
+            FTLCONF_webserver_api_password: '{{ pihole_webpassword }}'
+            FTLCONF_dns_upstreams: '{{ router_ip }}'
+            FTLCONF_dns_listeningMode: all
+            FTLCONF_dns_bogusPriv: "false"
+            FTLCONF_dns_domainNeeded: "false"
+            FTLCONF_dns_revServers: 'true,{{ cidr }},{{ router_ip }},lan'
+            FTLCONF_dhcp_active: "true"
+            FTLCONF_dhcp_start: "{{ dhcp_start }}"
+            FTLCONF_dhcp_end: "{{ dhcp_end }}"
+            FTLCONF_dhcp_router: "{{ router_ip }}"
+            FTLCONF_dns_domain: "lan"
+            FTLCONF_misc_etc_dnsmasq_d: 'true'
           # Volumes store your data between container upgrades
           volumes:
             - "{{ pihole_config_folder }}:/etc/pihole/"
             - "{{ dnsmasq_config_folder }}:/etc/dnsmasq.d/"
           # Recommended but not required (DHCP needs NET_ADMIN)
           cap_add:
+            # See https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
+            # Required if you are using Pi-hole as your DHCP server, else not needed
             - NET_ADMIN
+            # Required if you are using Pi-hole as your NTP client to be able to set the host's system time
+            - SYS_TIME
+            # Optional, if Pi-hole should get some more processing time
+            - SYS_NICE
           restart: unless-stopped
           labels:
             wud.tag.include: latest
