--- a/roles/ollama/vars/main.yml
+++ b/roles/ollama/vars/main.yml
@@ -1,21 +1,27 @@
 ---
 # roles/ollama/vars/main.yml
+proxy_command_prefix: "npx -y supergateway --cors --port "
+proxy_command_middle: " --stdio \""
+proxy_command_postfix: "\""
 mcp_services:
-  - name: todoist-mcp-server
-    command: sh -c "uvx mcp-proxy --pass-environment --sse-host 0.0.0.0 --sse-port={{ todoist_mcp_proxy_port }} -- npx -y @chrusic/todoist-mcp-server-extended"
+  - name: todoist-mcp-server-extended
+    command: npx -y @chrusic/todoist-mcp-server-extended
+    sse_port: "{{ todoist_mcp_proxy_port }}"
     ports: 
       - "{{ todoist_mcp_proxy_port }}:{{ todoist_mcp_proxy_port }}"
     environment:
       TODOIST_API_TOKEN: "{{ todoist_api_token }}"
 
-  - name: todoist-mcp-server-python
-    command: sh -c "uvx mcp-proxy --pass-environment --sse-host 0.0.0.0 --sse-port={{ todoist_mcp_py_proxy_port }} -- uvx --from https://github.com/kirel/todoist-mcp-python.git mcp-server-todoist"
+  - name: todoist-mcp-python
+    command: uvx --from https://github.com/kirel/todoist-mcp-python.git mcp-server-todoist
+    sse_port: "{{ todoist_mcp_py_proxy_port }}"
     ports: 
       - "{{ todoist_mcp_py_proxy_port }}:{{ todoist_mcp_py_proxy_port }}"
     environment:
       TODOIST_API_TOKEN: "{{ todoist_api_token }}"
 
-  - name: memory-mcp-server
-    command: sh -c "uvx mcp-proxy --pass-environment --sse-host 0.0.0.0 --sse-port={{ memory_mcp_proxy_port }} -- npx -y @modelcontextprotocol/server-memory"
+  - name: server-memory
+    command: npx -y @modelcontextprotocol/server-memory
+    sse_port: "{{ memory_mcp_proxy_port }}"
     ports: 
       - "{{ memory_mcp_proxy_port }}:{{ memory_mcp_proxy_port }}"
