--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -103,6 +103,7 @@
           image: "ghcr.io/home-assistant/home-assistant:latest"
           volumes:
             - "{{homeassistant_config_folder}}:/config"
+            - "{{ caddy_data_folder }}/pki/authorities/local/root.crt:/config/additional_ca/caddy_local_root.crt:ro"
             - "{{homeassistant_config_folder}}/docker/run:/etc/services.d/home-assistant/run"
             - "{{homeassistant_media_folder}}:/media"
             - /etc/localtime:/etc/localtime:ro
@@ -120,6 +121,7 @@
             - PGID={{uid}}
             - "PACKAGES=iputils"
             - UMASK=007
+            - REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
           labels:
             - 'wud.tag.include=^\d+\.\d+\.\d+$$'
             - 'wud.link.template=https://github.com/home-assistant/core/releases/tag/$${major}.$${minor}.$${patch}'
