build the ollama docker container for intel

--- a/roles/ollama_arc/defaults/main.yml
+++ b/roles/ollama_arc/defaults/main.yml
@@ -9,3 +9,15 @@ ollama_arc_device_type: Arc # Or Flex, Max, iGPU
 ollama_arc_benchmark_model: "" # Set to a model filename like "mistral-7b-v0.1.Q4_0.gguf" to enable benchmark env var
 ollama_arc_no_proxy: localhost,127.0.0.1
 ollama_arc_restart_policy: always
+
+# Build options
+ollama_arc_build_repo_url: https://github.com/intel/ipex-llm.git
+ollama_arc_build_repo_version: main # Or specific tag/commit
+ollama_arc_build_repo_dest: /opt/src/ipex-llm # Path on target host to clone the repo
+ollama_arc_build_context_subdir: docker/llm/inference-cpp # Subdirectory within the repo containing the Dockerfile
+ollama_arc_build_nocache: false # Corresponds to --no-cache, usually false for automation
+ollama_arc_build_rm: true # Corresponds to --rm
+ollama_arc_build_args: # Corresponds to --build-arg
+  http_proxy: "" # Set via group_vars/host_vars if needed
+  https_proxy: "" # Set via group_vars/host_vars if needed
+  no_proxy: "{{ ollama_arc_no_proxy }}" # Default to the container's no_proxy setting
