--- a/roles/ollama_arc/handlers/main.yml
+++ b/roles/ollama_arc/handlers/main.yml
@@ -2,5 +2,6 @@
 - name: Restart vLLM container
   community.docker.docker_container:
     name: "ipex-llm-serving-xpu-container"
-    state: restarted # Use 'restarted' state here
+    state: started # Use 'restarted' state here
+    restart: true
   become: true
